--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="canonical" href="https://USERNAME.github.io/REPO/" />
 
   <!-- Basic SEO / Social -->
-  <meta property="og:title" content="Personal Journal" />
+  <meta property="og:title" content="Journal Wisnu Yayan" />
   <meta property="og:description" content="Perjalanan hidup, travel, refleksi, dan tulisan." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://USERNAME.github.io/REPO/" />
@@ -48,7 +48,7 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="hero-copy">
-          <p class="eyebrow">Catatan pribadi yang rapi dan tenang</p>
+          <p class="eyebrow">Apapun itu akan kusimpan disini</p>
           <h1 class="hero-title">
             Perjalanan hidup, perjalanan tempat, dan perjalanan pikiran.
           </h1>
@@ -134,4 +134,5 @@
   <script defer src="assets/js/main.js"></script>
 </body>
 </html>
+
 
