--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <footer class="footer">
     <div class="container footer-row">
-      <p>© <span data-year></span> Personal Journal. All rights reserved.</p>
+      <p>© <span data-year></span> Personal Journal. SEMUA AKAN BAIK BAIK SAJA.</p>
       <a class="muted" href="#main" data-smooth-scroll>Back to top</a>
     </div>
   </footer>
@@ -134,5 +134,6 @@
   <script defer src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
