--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About — Personal Journal</title>
+  <title>About — Journal Wisnuy</title>
   <meta name="description" content="Cerita singkat tentang penulis: latar, minat, dan alasan menulis." />
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
@@ -12,7 +12,7 @@
 
   <header class="site-header" data-sticky>
     <nav class="nav container" aria-label="Navigasi utama">
-      <a class="brand" href="index.html"><span class="brand-mark">◼</span><span class="brand-text">Personal Journal</span></a>
+      <a class="brand" href="index.html"><span class="brand-mark">◼</span><span class="brand-text">Journal Wisnuy</span></a>
       <button class="nav-toggle" type="button" data-nav-toggle aria-label="Buka menu"><span aria-hidden="true">☰</span></button>
       <div class="nav-links" data-nav-links>
         <a class="active" href="about.html" aria-current="page">About</a>
@@ -29,7 +29,7 @@
   <main id="main" class="container page">
     <header class="page-head">
       <h1>About</h1>
-      <p class="muted">Singkat, jelas, manusiawi. Bukan CV.</p>
+      <p class="muted">Singkat saja .</p>
     </header>
 
     <section class="prose card">
@@ -48,16 +48,16 @@
 
       <h2>Kontak</h2>
       <p>
-        Tambahkan email/IG/LinkedIn kamu di sini (opsional).
+        Tambahkan kebahagiaan dalam diri.
         Untuk sekarang, contoh:
-        <span class="inline-chip">wisnucoeg12@gmail.com</span>
+        <span class="inline-chip">mencabut singkong tetangga</span>
       </p>
     </section>
   </main>
 
   <footer class="footer">
     <div class="container footer-row">
-      <p>© <span data-year></span> Personal Journal. All rights reserved.</p>
+      <p>© <span data-year></span> Personal Journal. SEMUA AKAN BAIK BAIK SAJA.</p>
       <a class="muted" href="#main" data-smooth-scroll>Back to top</a>
     </div>
   </footer>
@@ -65,3 +65,4 @@
   <script defer src="assets/js/main.js"></script>
 </body>
 </html>
+
