--- a/travel.html
+++ b/travel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Travel — Personal Journal</title>
+  <title>Travel — Journal Wisnuy</title>
   <meta name="description" content="Daftar perjalanan dalam bentuk kartu, bisa difilter lokasi dan tahun, lengkap dengan detail." />
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
@@ -12,7 +12,7 @@
 
   <header class="site-header" data-sticky>
     <nav class="nav container" aria-label="Navigasi utama">
-      <a class="brand" href="index.html"><span class="brand-mark">◼</span><span class="brand-text">Personal Journal</span></a>
+      <a class="brand" href="index.html"><span class="brand-mark">◼</span><span class="brand-text">Journal Wisnuy</span></a>
       <button class="nav-toggle" type="button" data-nav-toggle aria-label="Buka menu"><span aria-hidden="true">☰</span></button>
       <div class="nav-links" data-nav-links>
         <a href="about.html">About</a>
@@ -85,7 +85,7 @@
 
   <footer class="footer">
     <div class="container footer-row">
-      <p>© <span data-year></span> Personal Journal. All rights reserved.</p>
+      <p>© <span data-year></span> Journal Wisnuy. SEMUA AKAN BAIK BAIK SAJA.</p>
       <a class="muted" href="#main" data-smooth-scroll>Back to top</a>
     </div>
   </footer>
@@ -93,4 +93,5 @@
   <script defer src="assets/js/main.js"></script>
 </body>
 </html>
+
 
