--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@
         <div class="hero-card" aria-label="Kartu kutipan">
           <div class="glass">
             <p class="quote">
-              “Aku pengin hidup yang terdokumentasi dengan baik: bukan untuk pamer, tapi untuk memahami.”
+              “Ini tentang aku, tentang dia, tentang kita, tentang mereka, tentang semua yang patah hati.. 
+               Kehilangan dan bencana adalah melody pembuka bulan Januari.. 
+               Dia tidak suram, hanya saja warnanya sedikit pudar, 
+               kata tetua ini sebab akibat beberapa umat manusia yang menjarah negeri nya sendiri.. 
+               Entahlah atau malah ini adalah teguran lembut tuhan, agar manusia mulai membenahi diri. .”
             </p>
-            <p class="quote-meta">— Catatan, 2025</p>
+            <p class="quote-meta">— Catatanku</p>
             <div class="hero-badges" aria-label="Topik">
               <span class="badge">Life</span>
               <span class="badge">Travel</span>
@@ -134,6 +138,7 @@
   <script defer src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
