--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 
       <h2>Kontak</h2>
       <p>
-        Tambahkan kebahagiaan dalam diri.
+        kebahagiaan dalam diri.
         Untuk sekarang, contoh:
         <span class="inline-chip">mencabut singkong tetangga</span>
       </p>
@@ -65,4 +65,5 @@
   <script defer src="assets/js/main.js"></script>
 </body>
 </html>
+
 
