--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Wisnu Coeg — Personal Journal</title>
-  <meta name="description" content="Catatan perjalanan hidup, travel, refleksi, dan tulisan pribadi." />
+  <title>Personal Journal - Wisnuy</title>
+  <meta name="description" content=" Aku semata-mata ingin jadi Ultraman." />
   <meta name="robots" content="index,follow" />
   <link rel="canonical" href="https://USERNAME.github.io/REPO/" />
 
   <!-- Basic SEO / Social -->
-  <meta property="og:title" content="Journal Wisnu Yayan" />
+  <meta property="og:title" content="Journal Wisnuy" />
   <meta property="og:description" content="Perjalanan hidup, travel, refleksi, dan tulisan." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://USERNAME.github.io/REPO/" />
@@ -23,7 +23,7 @@
     <nav class="nav container" aria-label="Navigasi utama">
       <a class="brand" href="index.html" aria-label="Beranda">
         <span class="brand-mark" aria-hidden="true">◼</span>
-        <span class="brand-text">Personal Journal</span>
+        <span class="brand-text">Journal Wisnuy</span>
       </a>
 
       <button class="nav-toggle" type="button" data-nav-toggle aria-label="Buka menu">
@@ -53,7 +53,7 @@
             Perjalanan hidup, perjalanan tempat, dan perjalanan pikiran.
           </h1>
           <p class="hero-subtitle">
-            Ini bukan portfolio “corporate”. Ini jurnal: ringkas, jujur, dan enak dibaca di ponsel.
+            ini adalah tentang rahasia yang akan aku bagikan disini.
           </p>
 
           <div class="hero-cta">
@@ -98,7 +98,7 @@
 
       <div class="grid-3">
         <article class="card lift">
-          <h3>Trip: Bandung, 2024</h3>
+          <h3>Trip: Bandung, 2019</h3>
           <p class="muted">Hujan, kopi, dan jalan kaki panjang yang bikin kepala lebih waras.</p>
           <a class="card-link" href="travel.html">Buka Travel →</a>
         </article>
@@ -138,6 +138,7 @@
   <script defer src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
